2004-06-30 Ian Rutt
 * Fixed Linux build system after my changes yesterday (the problems of
 doing development under Windows...)

2004-06-29 Ian Rutt
 * Began standardisation of GLIMMER's use of standard output, using new module
 called glide_messages. NetCDF usage of this not completed yet.

2004-06-28 Ian Rutt
 * Changed relaxed.f90 so that the relaxed topography is set to just below
 zero in masked areas.

2004-06-18 Ian Rutt
 * Added possibility of reading in fields from netcdf file scaled or
   unscaled
 * Added code to calculate relaxed bedrock and add it to netcdf input file
   (relaxed.f90)

2004-06-18 Magnus Hagdorn
 * glimmer_CFproj.f90: make a distinction between polar_stereographic and 
   general stereographic projections. Add a standard parallel to 
   polar_stereographic

2004-06-16 Magnus Hagdorn
 * minor documentation fixes

2004-06-15 Magnus Hagdorn
 * fixed doc Makefile

2004-06-15 Magnus Hagdorn
 * input2ncdf.f90: work out node spacing 
 * new build system
	
2004-06-14 Magnus Hagdorn
 * fixed problems in input CF file (g_land.input.nc)
 * work out node spacing and removed unused tensor quantities (bin2ncdf.f90)
 * fixed dependencies of bin2ncdf.f90 (Makefile)

2004-06-13 Magnus Hagdorn
 * add mapping info (g_land.input.nc)
 * added files to doc which I had forgotton before (Makefile, varlist.tex.in)
 * added longitudes (glimmer_modu.f90, glimmer_setup.f90, ncdf_vars.def)
 * added CF projections (Makefile, glimmer_CFproj.f90, ncdf_file.f90.in, ncdf_infile.f90.in, generate_ncvars.py)
 * glimmer_object.f90: initialise output later so it gets projections from input
 * ncdf.f90.in: moved error handle out of module
	
2004-06-11 Ian Rutt
 * Extended GMT projections code to allow the specification of a
   standard parallel when using the polar stereographic projection

2004-06-09 Ian Rutt
 * Added up/downscaling mask to netcdf IO, and removed redundent code
 * Added this to input2ncdf.f90