@@ -138,6 +138,7 @@ contains
   function handle_output(section, output)
     use glimmer_ncdf
     use glimmer_config
+    use glide_messages
     implicit none
     type(ConfigSection), pointer :: section
     type(glimmer_nc_output), pointer :: output
@@ -146,6 +147,7 @@ contains
     ! local variables
     character(len=210) vars
     integer :: numspots=-1
+    character(80) :: outtxt
 
     handle_output=>add(output)
     
@@ -165,8 +167,9 @@ contains
 
     if (associated(handle_output%spotx) .and. associated(handle_output%spoty)) then
        if (size(handle_output%spotx).ne.size(handle_output%spoty)) then
-          write(*,*) 'Warning [netCDF output]  number of spot x and y locations differ ', &
-               size(handle_output%spotx), size(handle_output%spoty)
+          write(outtxt,*)size(handle_output%spotx), size(handle_output%spoty)
+          call glide_msg(GM_WARNING,__FILE__,__LINE__,&
+            '[netCDF output] number of spot x and y locations differ '//trim(outtxt))
        else
           handle_output%nc%do_spot = .true.
        end if
@@ -175,8 +178,7 @@ contains
     vars = ' '//trim(vars)//' '
 
     if (handle_output%nc%filename(1:1).eq.' ') then
-       write(*,*) 'Error, no file name specified [netCDF output]'
-       stop
+       call glide_msg(GM_FATAL,__FILE__,__LINE__,'Error, no file name specified [netCDF output]')
     end if
 
     ! select which variables should be written
@@ -186,6 +188,7 @@ contains
   function handle_input(section, input)
     use glimmer_ncdf
     use glimmer_config
+    use glide_messages
     implicit none
     type(ConfigSection), pointer :: section
     type(glimmer_nc_input), pointer :: input
@@ -200,8 +203,7 @@ contains
     handle_input%current_time = handle_input%get_time_slice
 
     if (handle_input%nc%filename(1:1).eq.' ') then
-       write(*,*) 'Error, no file name specified [netCDF input]'
-       stop
+       call glide_msg(GM_FATAL,__FILE__,__LINE__,'Error, no file name specified [netCDF input]')
     end if
   end function handle_input
 end module glimmer_ncparams
